@@ -174,7 +174,7 @@ def searchWindowsDependencies(path, blacklist=[]):
 	ms.load()
 	mstype = ms.file(path)
 	ms.close()
-	if not 'PE32 executable for MS Windows' in mstype:
+	if not 'PE32 executable for MS Windows' in mstype and not "PE32+ executable for MS Windows" in mstype:
                 return None
         binary = open(path, 'rb')
         lines = binary.read()
@@ -189,3 +189,25 @@ def searchWindowsDependencies(path, blacklist=[]):
 
 def xmlPrettyPrintWindowsDeps(res, root):
 	pass
+
+## experimental clamscan feature
+## Always run freshclam before scanning to get the latest
+## virus signatures!
+def scanVirus(path, blacklist=[]):
+	ms = magic.open(magic.MAGIC_NONE)
+	ms.load()
+	mstype = ms.file(path)
+	ms.close()
+	if not 'PE32 executable for MS Windows' in mstype and not "PE32+ executable for MS Windows" in mstype:
+                return None
+	else:
+		p = subprocess.Popen(['clamscan', "%s" % (path,)], stdout=subprocess.PIPE, stderr=subprocess.PIPE, close_fds=True)
+		(stanout, stanerr) = p.communicate()
+		if p.returncode == 0:
+                	return
+		else:
+			## Oooh, virus found!
+			viruslines = stanout.split("\n")
+			## first line contains the report:
+			virusname = viruslines[0].strip()[len(path) + 2:-6]
+			return virusname
