@@ -1,3 +1,7 @@
+2011-09-04
+* add experimental virus scanning method using clamscan, just for Windows
+executables
+
 2011-09-02
 * fix bugs in extraction code using xgettext
 * store line numbers for extracted strings. This might come in handy in future
